--- a/paper/DA.tex
+++ b/paper/DA.tex
@@ -162,7 +162,7 @@ RNA sequences. Because the Sankoff algorithm is practically not applicable, the
 pre-calculation of the structure ensemble of each sequence, e.g. basepair
 probabilities in thermodynamically equilibrated RNA structure ensembles
 \cite{McCaskill:1990}, is used by different methods to speed up the calculation
-of structure-based alignments. {\color{red} include a review of structural alignments }. In particualr, tThe programs \pmcomp{} for pairwise and
+of structure-based alignments. {\color{red} include a review of structural alignments }. In particular, the programs \pmcomp{} for pairwise (now RNApaln {\color{red}CITATION}) and
 \pmmulti{} for multiple alignments \cite{Hofacker15073017}, as well as
 \locarna{} \cite{Will17432929} score the alignment based on the notion of a
 common secondary structure. Despite of the usage of the basepair probability
@@ -197,27 +197,21 @@ conservation of structural features. However, the relative importance
 of sequence  versus structural integrity varies across all ncRNAs; micro 
 RNAs have strong sequence and structure constraints, whereas tRNAs
 are mostly constrained with respect to their tertiary structures, with mostly
-the anti-codon being constrained for sequence compostion. It is 
+the anti-codon being constrained for sequence composition. It is 
 therefore essential to accommodate a dynamic range of sequence-structure 
 weight functions when comparing two RNA sequences impartially. \\
  
-Consequently, we developed a new heuristic method of aligning two RNA 
+Consequently, we developed a new algorithm for aligning two RNA 
 basepair probability matrices (dot plots) called \dotaligner{}. It leverages the diversity of 
 suboptimal solutions from a partition function of RNA secondary structure 
 predictions to identify an optimal sequence-structure alignment of two RNAs. 
 \dotaligner{} thus overcomes the limitations of comparing unique RNA 
 secondary structures (such as minimum free energy predictions) to yield 
-an optimal sequence alignment that considers mutual basepair probabilities.\\
+an optimal sequence alignment that considers mutual base pair probabilities.
+\textbf{Figure 1} illustrates a structural alignment performed with \dotaligner{}
+in contrast to an alignment that considers only sequence composition.\\
 
-\dotaligner{} employs the heuristics alignment-envelope, which imposes
-constraints to sub-optimal string alignments, and fold-envelope, which imposes
-constraints to pre-calculated base pairing probabilities, to build pairwise 
-sequence-structure alignments from pre-calculated RNA dot plots.\\
-
-A major criteria for the implementation was a fast
-running time to make \dotaligner{} applicable for RNA structure clustering of
-large data sets. The alignment procedure consists of two steps:
-
+%%%%%%%%         FIGURE 1       %%%%%%%%%
 \begin{figure}
  \includegraphics[width=\textwidth]{figX}
 \caption \textbf{{Schematic of a pairwise alignment with DotAligner.} 
@@ -234,6 +228,24 @@ large data sets. The alignment procedure consists of two steps:
   base pairing ensemble of both sequences. 
  }
 \end{figure}
+
+The algorithm performs pairwise sequence-structure alignments from 
+pre-calculated RNA dot plots using alignment-envelope heuristics, which 
+impose constraints on sub-optimal string alignments, and fold-envelope 
+heuristics, which impose constraints to pre-calculated base pairing probabilities.\\
+
+The alignment procedure consists of two steps: 
+1. pairwise probabilistic string alignments,
+2. stochastic backtracking of string alignments and combined weight 
+of corresponding dot plot alignments.\\
+
+
+
+A major criteria for the implementation was a fast
+running time to make \dotaligner{} applicable for RNA structure clustering of
+large data sets. The alignment procedure consists of two steps:
+
+
 
 \subsection*{ Fast and accurate classification of RNA structures  } 
 We compared the quality of the alignments produced by \dotaligner{} with the results of
@@ -319,7 +331,7 @@ compared to XXX random peaks.
 
   \begin{figure}
  \includegraphics[width=\textwidth]{fig3}
- \caption { Density based clustering of known  RNA structures. 
+ \caption { Density based clustering of known RNA structures using \dotaligner{} and OPTICS. Effect of OPTICS parameters on clustering accuracy (\textbf{A}) and amount of clusters (\textbf{B}) from a \dotaligner{} dissimilarity matrix of 580 reference RFAM structures and their dinucleotide-shuffled controls (horizontal dashed line indicates expected amount of clusters, or unique RFAM families). (\textbf{C}) Sorted reachability plot, i.e. distance to nearest neighbour, of RFAM and shuffled sequences using optimal parameters from (\textbf{A}). Coloured bars indicate clustered sequences. 
  }
 \end{figure}
 
